<resources>
    <string name="app_name">Solalat Provider</string>
    <string name="app_license">Copyright@Raantech Company</string>
    <string name="welcome">Welcome</string>
    <string name="please_choose_your_preference_language">Please choose your preferred language!</string>
    <string name="english">English</string>
    <string name="arabic">العربية</string>
    <string name="start">Start</string>
    <string name="btn_try_again">try Again</string>
    <string name="error_no_internet">No Internet connection</string>
    <string name="error_server">timeout</string>
    <string name="error_msg">Something went wrong</string>
    <string name="session_ended">Session Ended</string>
    <string name="screen_shot_denied">Grant stoarge permission to take screenshot!</string>
    <string name="camera_permission_denied">Grant camera permission to take the 3 seconds video</string>
    <string name="screen_shot">take screenshot</string>
    <string name="alert_dialog_title">Solalat Provider</string>
    <string name="alert_dialog_all_info_in_english">All information entered must be in English</string>
    <string name="not_available_yet">This feature is coming soon to Al Alami app!</string>
    <string name="cancel">Cancel</string>
    <string name="select">Select</string>
    <string name="loading">Loading …</string>
    <string name="under_development">Under Development</string>
    <string name="ok">OK</string>
    <string name="none">None</string>
    <string name="edit">Edit</string>
    <string name="updated_successfully">Updated Successfully</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="empty_string" />
    <string name="you_re_not_logged_in">You\'re Not Logged In.</string>
    <string name="you_need_to_login_into_your_account_to_see_this_screen">You need to login into your account\nto see this screen</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="go_to_settings">Go To Settings</string>
    <string name="no_activity_data_chart_err">No Data Yet !</string>
    <string name="choose_image_folders_mode_title">select Image</string>
    <string name="choose_image_done_button_txt">Done</string>
    <string name="choose_image_max_select_message">You have reached selection limit!</string>
    <string name="general_err_msg">"SomeThing Happened Please Try Again "</string>
    <string name="must_not_be_empty">must not be empty</string>
    <string name="must_be_at_least">must be at least </string>
    <string name="must_not_be">must not be </string>
    <string name="characters"> characters</string>
    <string name="numbers"> numbers</string>
    <string name="text">Text</string>
    <string name="date">Date</string>
    <string name="email_not_valid_err">Enter a valid email address (example: aaa@bbb.ccc)</string>
    <string name="phone_not_valid_err">Enter a valid phone number (example: 07xxxxxxx)</string>
    <string name="password_not_valid_err">Enter a valid password (example: P@ssw0rd)</string>
    <string name="please_select_your_gender">Please select your gender</string>
    <string name="password_not_match">Password not match</string>
    <string name="text_not_valid_err">Enter a valid Text</string>
    <string name="date_not_valid_err">Enter a valid date</string>
    <string name="time_not_valid_err">Enter a valid time</string>
    <string name="digits">digits</string>
    <string name="next">NEXT</string>
    <string name="select_time">Select time</string>
    <string name="submit">Submit</string>
    <string name="data_missing">Data missing</string>
    <string name="please_fill_data_fields">Please fill all the data fields</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="hint_date">Date</string>
    <string name="time">Time</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="phone_number">Phone number</string>
    <string name="otp">OTP</string>
    <string name="number">Number</string>
    <string name="new_update">NEW UPDATE!</string>
    <string name="there_s_a_new_update_available_for_fly_us_vip">There’s a new update available for\nFLY US VIP</string>
    <string name="update_now">UPDATE NOW</string>
    <string name="remind_me_later">REMIND ME LATER</string>
    <string name="close_app">CLOSE APP</string>
    <string name="important_update">IMPORTANT UPDATE!</string>
    <string name="completed_successfully">Completed Successfully</string>
    <string name="continue_">Continue</string>
    <string name="login">Login</string>
    <string name="enter_your_mobile_number">Enter your mobile number</string>
    <string name="logout">Logout</string>
    <string name="title_on_boarding_1">title_on_boarding_1</string>
    <string name="description_on_boarding_1">description_on_boarding_1</string>
    <string name="title_on_boarding_2">title_on_boarding_2</string>
    <string name="description_on_boarding_2">description_on_boarding_2</string>
    <string name="title_on_boarding_3">title_on_boarding_3</string>
    <string name="description_on_boarding_3">description_on_boarding_3</string>
    <string name="title_on_boarding_4">title_on_boarding_4</string>
    <string name="description_on_boarding_4">description_on_boarding_4</string>
    <string name="verification">Verification</string>
    <string name="please_check_you_message_for_a_four_digit_security_code_and_enter_it_below">Please check you message for a four-digit security code and enter it below.</string>
    <string name="i_didn_t_receive_the_code">I didn’t receive the code</string>
    <string name="confirm">Confirm</string>
    <string name="resend_code">RESEND CODE</string>
    <string name="verify">Verify</string>
    <string name="add_Media">Add Media</string>
    <string name="media">Media</string>
    <string name="no_data_found">No Data Found</string>
    <string name="no_available_data">-- No Available Data --</string>
    <string name="menu_my_account">My Account</string>
    <string name="menu_notifications">Notifications</string>
    <string name="menu_language">Language</string>
    <string name="menu_report_user">Report User</string>
    <string name="menu_technical_support">Technical Support</string>
    <string name="menu_about_us">About solalat</string>
    <string name="solalat_services">Solalat Services</string>
    <string name="add_accessories">Add accessories</string>
    <string name="add_health_services">Add health services</string>
    <string name="add_barn">Add barn</string>
    <string name="add_transportation_services">Add transportation services</string>
    <string name="my_accessories">My accessories</string>
    <string name="my_health_services">My health services</string>
    <string name="my_barn">My barn</string>
    <string name="my_transportation_services">My transportation services</string>
    <string name="view_products">View products</string>
    <string name="add_product">Add Product</string>
    <string name="edit_product">Edit product</string>
    <string name="share_products">Share Products</string>
    <string name="product_name">Product name</string>
    <string name="add_product_name">Add product name</string>
    <string name="add_product_description">Add product description</string>
    <string name="product_description">Product description</string>
    <string name="enter_price">Enter price</string>
    <string name="sar">Saudi Arabia Riyal</string>
    <string name="enter_phone_number_to_contact">Enter phone number to contact</string>
    <string name="upload_product_image">Upload product images</string>
    <string name="accessory_type">Accessory Type</string>
    <string name="please_select_the_category">Please select the category</string>
    <string name="product_price">Product Price</string>
    <string name="product_images">Product Images</string>
    <string name="please_select_the_product_images">Please select the product images</string>
    <string name="is_product_active">Is Product Active</string>
    <string name="is_available">is_available</string>
    <string name="the_product_will_be_available_on_a_date">The product will be available on a date</string>
    <string name="submit_date">submit</string>
    <string name="done">Done</string>
    <string name="new_product">New Product</string>
    <string name="add_new_service">Add new service</string>
    <string name="edit_information">Edit Information</string>
    <string name="products_views">Products Views</string>
    <string name="balance">Balance</string>
    <string name="sold_products">Sold products</string>
    <string name="Visit">Visit</string>
    <string name="sold">Sold</string>
    <string name="receive_whatsapp">Receive WhatsApp</string>
    <string name="contact_us">Contact us</string>
    <string name="search_what_to_ask_here">Search here</string>
    <string name="no_faq_s_found">No Faq\'s Found</string>
    <string name="help_request">Help Request</string>
    <string name="didnt_find_answer">Didn\'t find answer</string>
    <string name="call_us_now">Call us now</string>
    <string name="new_medical_service">New Medical Service</string>
    <string name="view_medical_service">View medical service</string>
    <string name="add_medical_service">Add Medical Service</string>
    <string name="edit_medical_service">Edit Medical Service</string>
    <string name="share_service">Share service</string>
    <string name="name">Name</string>
    <string name="add_name">Add name</string>
    <string name="experiences">Experiences</string>
    <string name="add_experiences">Add Experiences</string>
    <string name="enter_address">Enter Address</string>
    <string name="address">Address</string>
    <string name="service_type">Service type</string>
    <string name="add_ads">Add ads</string>
    <string name="is_service_active">Is Service Active</string>
    <string name="search_here">Search here</string>
    <string name="location">Location</string>
    <string name="please_pick_location">Please pick location</string>
    <string name="services_views">Services Views</string>
    <string name="number_of_call">Number of calls</string>
    <string name="call_now">Call Now</string>
    <string name="global_transportation">Global Transportation</string>
    <string name="truck_images">Truck images</string>
    <string name="plate_number">Plate number</string>
    <string name="enter_plate_number">Enter plate number</string>
    <string name="factoring_year">Factoring year</string>
    <string name="please_select_the_manufacturing_year">Please select manufacturing year</string>
    <string name="you_can_select_multiple_cities">You can select multiple cities</string>
    <string name="cities">Cities</string>
    <string name="please_select_city">Please select city</string>
    <string name="the_areas_you_serve">The area you serve</string>
    <string name="add_truck">Add Truck</string>
    <string name="view_transport_service">View transport services</string>
    <string name="in_order_to_be_able_to_receive_sales_amounts_please_fill_in_your_bank_account_information">In order to be able to receive sales amounts, please fill in your bank account information</string>
    <string name="complete">Complete the process</string>
    <string name="bank_name">Bank name</string>
    <string name="iban">IBAN</string>
    <string name="add_the_iban_to_your_bank_account">Add the IBAN to your bank account</string>
    <string name="full_name">Full Name</string>
    <string name="add_the_full_name_as_registered_in_the_bank">Add the full name as registered in the bank</string>
</resources>