<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.raantech.solalat.provider.ui.products.viewmodels.ProductsViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            android:id="@+id/toolbar_layout"
            layout="@layout/layout_toolbar" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    style="@style/textview_normal_regular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/_40sdp"
                    android:layout_marginTop="@dimen/_30sdp"
                    android:layout_marginEnd="@dimen/_40sdp"
                    android:gravity="center"
                    android:text="@string/in_order_to_be_able_to_receive_sales_amounts_please_fill_in_your_bank_account_information"
                    android:textColor="@color/toolbar_title_color"
                    android:textSize="@dimen/_13ssp" />

                <TextView
                    style="@style/textview_normal_regular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_12sdp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:layout_marginEnd="@dimen/_12sdp"
                    android:text="@string/bank_name"
                    android:textColor="@color/edittext_color"
                    android:textSize="@dimen/_14ssp" />

                <com.skydoves.powerspinner.PowerSpinnerView
                    android:id="@+id/spinnerBanks"
                    style="@style/normalRegularFontStyle"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_45sdp"
                    android:layout_marginStart="@dimen/_12sdp"
                    android:layout_marginEnd="@dimen/_12sdp"
                    app:arrow_gravity="@{true}"
                    android:textAlignment="viewStart"
                    android:background="@drawable/edittext_background"
                    android:gravity="center|start"
                    android:hint="@string/select"
                    android:padding="10dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/defaultTextColor"
                    android:textSize="@dimen/_12ssp"
                    app:spinner_arrow_gravity="end"
                    app:spinner_arrow_padding="8dp"
                    app:spinner_arrow_tint="@color/button_color"
                    app:spinner_divider_show="false"
                    app:spinner_divider_size="0.4dp"
                    app:spinner_popup_animation="dropdown"
                    app:spinner_popup_background="@color/white"
                    app:spinner_popup_elevation="14dp" />

                <TextView
                    style="@style/textview_normal_regular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_12sdp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:layout_marginEnd="@dimen/_12sdp"
                    android:text="@string/iban"
                    android:textColor="@color/edittext_color"
                    android:textSize="@dimen/_14ssp" />

                <EditText
                    android:id="@+id/edIban"
                    style="@style/textview_normal_regular"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_12sdp"
                    android:layout_marginEnd="@dimen/_12sdp"
                    android:background="@drawable/edittext_background"
                    android:hint="@string/add_the_iban_to_your_bank_account"
                    android:minHeight="@dimen/_35sdp"
                    android:paddingStart="0dp"
                    android:paddingEnd="0dp"
                    android:text="@={viewModel.iban}"
                    android:textColor="@color/edittext_color"
                    android:textColorHint="@color/edittext_hint_color"
                    android:textSize="@dimen/_15ssp" />

                <TextView
                    style="@style/textview_normal_regular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_12sdp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:layout_marginEnd="@dimen/_12sdp"
                    android:text="@string/full_name"
                    android:textColor="@color/edittext_color"
                    android:textSize="@dimen/_14ssp" />

                <EditText
                    android:id="@+id/edName"
                    style="@style/textview_normal_regular"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_12sdp"
                    android:layout_marginEnd="@dimen/_12sdp"
                    android:background="@drawable/edittext_background"
                    android:hint="@string/add_the_full_name_as_registered_in_the_bank"
                    android:minHeight="@dimen/_35sdp"
                    android:paddingStart="0dp"
                    android:paddingEnd="0dp"
                    android:text="@={viewModel.fullname}"
                    android:textColor="@color/edittext_color"
                    android:textColorHint="@color/edittext_hint_color"
                    android:textSize="@dimen/_15ssp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnDone"
                    style="@style/AppTheme.Button"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/button_height"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="@dimen/_12sdp"
                    android:layout_marginTop="@dimen/_25sdp"
                    android:layout_marginEnd="@dimen/_12sdp"
                    android:layout_marginBottom="@dimen/_20sdp"
                    android:text="@string/complete" />

            </LinearLayout>
        </ScrollView>

    </LinearLayout>
</layout>
